Fixed z-index bug for TinyMCE toolbar in modals.

--- a/core/Piranha.Manager/assets/src/scss/inc/_tinymce.scss
+++ b/core/Piranha.Manager/assets/src/scss/inc/_tinymce.scss
@@ -1,11 +1,11 @@
 .tox-tinymce-inline {
     width: auto !important;
     margin-top: -.5rem !important;
-    z-index: 2000 !important;
+    z-index: 4000 !important;
 }
 
 .tox-silver-sink {
-    z-index: 2010 !important;
+    z-index: 4010 !important;
 }
 
 .tox {
